[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/Heart2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/UI/HealthBarOver.png" type="Texture" id=4]

[node name="UI" type="MarginContainer"]
anchor_right = 1.0
margin_left = 20.0
margin_right = 20.0
margin_bottom = 100.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
healthy_color = Color( 0.25098, 0.839216, 0.25098, 1 )
caution_color = Color( 0.972549, 0.972549, 0.352941, 1 )
danger_color = Color( 0.866667, 0.352941, 0.352941, 1 )
pulse_color = Color( 0.258824, 0.0313726, 0.0313726, 1 )
danger_zone = 0.3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1020.0
margin_bottom = 50.0
custom_constants/separation = 800

[node name="HealthUI" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0

[node name="HealthUnder" parent="HBoxContainer/HealthUI" index="0"]
margin_left = 0.0
margin_right = 250.0
texture_under = null
texture_over = ExtResource( 4 )
tint_progress = Color( 0.921569, 0.282353, 0.282353, 1 )

[node name="HealthBar" parent="HBoxContainer/HealthUI" index="1"]
margin_left = 0.0
margin_right = 250.0

[node name="Heart" type="Sprite" parent="HBoxContainer/HealthUI"]
position = Vector2( 4, 20.2271 )
scale = Vector2( 2.051, 2.051 )
texture = ExtResource( 2 )

[node name="Score" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
size_flags_vertical = 3
text = "shubham here
"

[editable path="HBoxContainer/HealthUI"]
